<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="60dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:paddingBottom="20dp"
            app:srcCompat="@mipmap/upeu" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/guinda"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtusuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:hint="@string/usuario"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="6dp"/>

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableLeft="@drawable/ic_candado"
            android:drawablePadding="6dp"/>

        <Button
            android:id="@+id/btnacceder"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio"
            android:padding="10dp"
            android:text="@string/acceder"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/btnregistrarse"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio"
            android:padding="10dp"
            android:text="@string/registrarse"
            android:layout_marginTop="5dp"
            android:textColor="@color/blanco"/>

        <Button
            android:id="@+id/btnsalir"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio"
            android:padding="10dp"
            android:text="@string/salir"
            android:layout_marginTop="5dp"
            android:textColor="@color/blanco"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>